# video-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  DOC_REVIEW.md  LICENSE  QA_REVIEW.md  README.md  SECURITY.md  check.sh  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  ci.yml  release-please.yml  release.yml
docs/: index.md
src/video_tools/: __init__.py  __main__.py  _version.py  scraper.py  youtube.py
tests/: test_cli.py  test_scraper.py  test_youtube.py
video_tools/: __main__.py  _version.py
