[project]
name = "video-tools"
version = "2.0.3"
description = "Unified CLI + SDK for downloading videos via yt-dlp or scripted scraping."
authors = [
    { name = "Kris Armstrong", email = "kris.armstrong@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2024.8",
    "selenium>=4.21",
    "webdriver-manager>=4.0",
    "keyring>=25.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "coverage[toml]>=7.4",
    "pytest-mock>=3.14",
]
dev = [
    "nox>=2024.4.15",
]

[project.urls]
Homepage = "https://github.com/krisarmstrong/video-tools"
"Bug Tracker" = "https://github.com/krisarmstrong/video-tools/issues"

[project.scripts]
video-tools = "video_tools.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-ra --showlocals"
testpaths = ["tests"]

[tool.coverage.run]
source = ["video_tools"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
extend-exclude = ["build", "dist", ".venv", "venv", ".tox", ".mypy_cache", ".ruff_cache"]

[tool.black]
line-length = 100
